# ImageScraper

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: clean-directory.md
.claude/hooks/: ruff-format-lint.sh
.claude/rules/: development-workflow.md  python-patterns.md  uv-usage.md
.claude/skills/modern-python-stack/: REFERENCE.md  SKILL.md
.claude/skills/ty-pro/: REFERENCE.md
.github/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md
scripts/: setup_rclone.sh
specs/001-fastapi-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-fastapi-api/contracts/: openapi.yaml
specs/001-streamlit-api-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-streamlit-api-ui/checklists/: requirements.md
specs/001-streamlit-api-ui/contracts/: openapi.yaml
specs/002-topic-discovery/: plan.md  spec.md  tasks.md
src/api/: __init__.py  app.py  schemas.py
src/cli/: scrape_images.py
src/lib/: README.md  __init__.py  drive_uploader.py  image_scraper.py  models_discovery.py  rate_limit.py  relevance_scorer.py  search_provider.py  topic_discovery.py  ui_helpers.py
src/lib/application/: __init__.py
src/lib/application/services/: __init__.py  rate_limiter.py
src/lib/application/use_cases/: __init__.py
src/lib/domain/: __init__.py
src/lib/domain/entities/: __init__.py  provenance.py
src/lib/domain/repositories/: __init__.py  search_repository.py  storage_repository.py
src/lib/domain/services/: __init__.py  relevance_scorer.py
src/lib/domain/types/: __init__.py  config_types.py  provenance_types.py  search_types.py
src/lib/infrastructure/: __init__.py
src/lib/infrastructure/http/: __init__.py  http_client.py  robots_checker.py
src/lib/infrastructure/parsers/: __init__.py  html_parser.py
src/lib/infrastructure/search/: __init__.py  duckduckgo_search.py
src/lib/infrastructure/storage/: __init__.py  local_storage.py
src/ui/: README.md  __init__.py  app.py  image_scraper_app.py
tests/unit/: test_api.py  test_list_and_download_images.py  test_parallel_download.py  test_parse_images.py  test_provenance_models.py  test_rate_limit.py  test_relevance_scorer.py  test_topic_discovery.py  test_ui_helpers.py
